[package]
name = "codecrafters-claude-code"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2024"
rust-version = "1.92"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }  # async runtime
async-openai = { version = "=0.36.1", features = ["byot", "chat-completion"] }
clap = { version = "4.6.1", features = ["derive"] }                 # CLI argument parsing
serde_json = "1.0.149"                                                # JSON serialization/deserialization
serde = { version = "1.0.228", features = ["derive", "serde_derive"] }
